# silva

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  skills-lock.json
.agents/skills/pandm-inspect/: SKILL.md
.agents/skills/pandm-inspect/scripts/: pandm_inspect.py
.agents/skills/pandm-track/: SKILL.md
.github/workflows/: publish.yml
configs/: sample_cpu.yaml  v1_ablation_nobad.yaml  v1_anchored_qwk.yaml  v1_deep_residual.yaml  v1_deep_residual_restart.yaml  v1_stage1_head.yaml
docs/rubrics/: color.md  composition.md  finish.md
docs/superpowers/plans/: 2026-05-31-silva-monorepo-split.md
docs/superpowers/specs/: 2026-05-24-silva-design.md  2026-05-31-silva-monorepo-publish-design.md  2026-06-03-silva-hf-demo-design.md  2026-06-05-silva-multidim-annotation-design.md
scripts/: artist_audit.py  blindspot_verify.py  coverage_probe.py  danbooru_probe.py  degrade_probe.py  estimate_anchors.py  eval_baselines.py  export_manifest.py  export_pairs.py  fit_domain.py  intra_rater.py  label_audit.py  misclass_probe.py  oof_audit.py  pairwise_eval.py  pairwise_oof_experiment.py  push_to_hub.py  refresh.sh  review_page.py  sample_review.py  score_pictoria.py  separability_probe.py  suspect_tags.py  sweep.py  tag_correlation.py  tag_preference.py  verify_embedding.py
silva/: __init__.py  config.py  evaluate.py  losses.py  metrics.py  model_card.py  train.py
silva/data/: dataset.py  manifest.py
silva/models/: aesthetic.py  ordinal_head.py  siglip_aesthetic.py
space/: README.md  app.py  requirements.txt
tests/: test_aesthetic_model.py  test_dataset.py  test_losses.py  test_manifest.py  test_metrics.py  test_split.py  test_train_smoke.py
