[project]
name = "silva"
version = "0.1.0"
description = "SILVA: SigLIP-based Illustration Visual Aesthetic Scorer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "transformers>=5.0",
    "accelerate>=0.34",
    "pandas>=2.2",
    "pyarrow>=17",
    "numpy>=1.26",
    "scipy>=1.13",
    "pillow>=10.4",
    "pydantic>=2",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Only needed by the Postgres example producer (scripts/export_manifest.py).
# Other data sources don't need these. Install with: uv sync --extra postgres
postgres = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff",
]

[tool.ruff]
exclude = [".venv"]
line-length = 160

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "RUF001",
    "ANN401",
    "PGH",
    "RUF003",
    "BLE001",
    "ERA001",
    "FIX002",
    "TD002",
    "TD003",
    "D",
    "A004",
    "ANN201",
    "B008",
    "FAST002",
    "INP001",
    "PLR2004",
    "PLR0913",
    "N812",
    "COM812",
    "T201",
    "TRY003",
    "EM102",
    "G004",
    "FBT001",
    "FBT002",
    "FBT003",
]

fixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/*" = ["S101", "E402", "F401", "ANN", "PLR2004", "PLC0415"]
"scripts/*" = ["PLC0415", "EM101"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# CUDA build of torch (driver supports CUDA 13.2 -> cu132). Pinning the index here
# keeps `uv sync` from falling back to the CPU wheel.
[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu132" }
torchvision = { index = "pytorch-cu132" }
